@startuml class_diagram
skinparam linetype ortho
package "models" {
 class Model {}

 class Bid {
 id: str
 amount: float
 date_placed: Date
 contract: Contract
 contractor: User
 accepted: bool
 } 

 class Contract {
 id: int
 contract_title: str
 bidding_end_date: Date
 job_description: str
 contractee: User
closed: bool
 lowest_bid(): float
 numbers_bids(): int
 bids(): Bid[]
 expired(): bool
 } 

 class User {
 type: str
 agency_name: str
 } 

 abstract class AbstractUser{
 id: int
 password: str
 username: str
 email: str
 }
 
 Bid --|> Model
 Contract --|> Model
 AbstractUser --|> Model
 User --|> AbstractUser
 Bid *-- Contract
 Bid --o Contract
 User --* Contract
 User -r-* Bid
 }

package "bid_views" {
class View {}
class CreateView {}
abstract class LoginRequiredMixin {}

class BidCreateView {
model: Bid
fields: str[]
form_valid(form: Form): HttpResponse
get_success_url(): str
}

class BidDeleteView {
    delete(request: Request): JsonResponse
}

class BidAcceptView {
    post(request: Request): JsonResponse
}


View <|-- CreateView
View <|-- BidAcceptView
View <|-- BidDeleteView
CreateView <|-- BidCreateView
LoginRequiredMixin <|-- BidDeleteView
LoginRequiredMixin <|-- BidCreateView
LoginRequiredMixin <|-- BidAcceptView

BidDeleteView *-- Bid
BidCreateView *-- Bid
BidAcceptView *-- Bid
}

package "forms" {
class Form {}

class CustomUserCreationForm {
model: User
fields: str[]
}

Form <|-- CustomUserCreationForm
}

CustomUserCreationForm *-u- User
CreateView *-- Form

@enduml